--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "@shoutem/ui": "^0.23.12",
+    "axios": "^0.18.0",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-masonry": "^0.5.0-alpha.3",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
